Asset manager: fixed long asset title not wrapping

--- a/src/css/boom/assets/thumbs.less
+++ b/src/css/boom/assets/thumbs.less
@@ -91,6 +91,7 @@
 				padding: 0.75rem;
 				margin: 0;
 				font-size: 1.6rem;
+				word-wrap: break-word;
 			}
 
 			p {
